Fixed overflow
One of the settings was wrong, even though it looked correct on Kubuntu. Fixed this now

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -330,7 +330,7 @@ section {
       align-self: end;
       font-size: 1rem;
       hyphens: none;
-      overflow: scroll;
+      overflow: clip;
     }
 
     &:hover {
